--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -16,6 +16,7 @@ Parameters:
   RootStackId: { Type: String }
   TemplateUrlPrefix: { Type: String }
   CloudFormationNotificationArn: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   Ec2ResourceTaggerServiceToken: { Type: String }
   SharedVpcCidrBlock: { Type: String }
 
@@ -228,6 +229,7 @@ Resources:
         VpcId: !Ref Vpc
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
