--- a/stacks/custom-resources.yml
+++ b/stacks/custom-resources.yml
@@ -70,6 +70,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AmazonSesSmtpCredentialsGeneratorFunction}
       RetentionInDays: 14
+  AmazonSesSmtpCredentialsGeneratorFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref AmazonSesSmtpCredentialsGeneratorFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   AmazonSesSmtpCredentialsGeneratorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -208,6 +221,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${S3StaticSiteDeployFunction}
       RetentionInDays: 14
+  S3StaticSiteDeployFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref S3StaticSiteDeployFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   S3StaticSiteDeployFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -315,6 +341,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${AvailabilityZoneSelectorFunction}
       RetentionInDays: 14
+  AvailabilityZoneSelectorFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref AvailabilityZoneSelectorFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   AvailabilityZoneSelectorFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -395,6 +434,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${EchoFunction}
       RetentionInDays: 14
+  EchoFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref EchoFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   EchoFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -524,6 +576,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${CloudWatchAlarmTaggerFunction}
       RetentionInDays: 14
+  CloudWatchAlarmTaggerFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref CloudWatchAlarmTaggerFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   CloudWatchAlarmTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
@@ -801,6 +866,19 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${Ec2ResourceTaggerFunction}
       RetentionInDays: 14
+  Ec2ResourceTaggerFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !GetAtt CloudWatchLogGroupTaggerFunction.Arn
+      LogGroupName: !Ref Ec2ResourceTaggerFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:application, Value: Infrastructure }
   Ec2ResourceTaggerFunctionErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
