Use new shared redis

--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -31,11 +31,11 @@ Parameters:
   CloudWatchAlarmTaggerServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   SharedRedisReplicationGroupEndpointAddress: { Type: String }
+  SharedRedisReplicationGroupEndpointPort: { Type: String }
   CastleHostname: { Type: String }
   CorporateHostname: { Type: String }
   ExchangeHostname: { Type: String }
   IdHostname: { Type: String }
-  DovetailRedisHostname: { Type: String }
   SharedGlueDatabaseName: { Type: String }
 
   DovetailAnalyticsLambdaCodeS3ObjectKey: { Type: String }
@@ -69,11 +69,11 @@ Resources:
         VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
         MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/METRICS_KINESIS_STREAM
         SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         DynamoDbKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM
         DynamoDbTableName: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TABLE_NAME
         DynamoDbTtl: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_TTL
         DynamoDbAccessRoleArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_ACCESS_ROLE
-        DovetailRedisHostname: !Ref DovetailRedisHostname
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -110,6 +110,8 @@ Resources:
         VpcPublicSubnet3Id: !Ref VpcPublicSubnet3Id
         SharedEcsAsgInstanceSecurityGroupId: !Ref SharedEcsAsgInstanceSecurityGroupId
         DynamoDbKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/analytics-ingest-lambda/DYNAMODB_KINESIS_STREAM
+        SharedRedisReplicationGroupEndpointAddress: !Ref SharedRedisReplicationGroupEndpointAddress
+        SharedRedisReplicationGroupEndpointPort: !Ref SharedRedisReplicationGroupEndpointPort
         SharedGlueDatabaseName: !Ref SharedGlueDatabaseName
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
