--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -81,6 +81,8 @@ Parameters:
   VpcPublicSubnet2Id: { Type: AWS::EC2::Subnet::Id }
   VpcPublicSubnet3Id: { Type: AWS::EC2::Subnet::Id }
   DynamoDbKinesisStreamArn: { Type: AWS::SSM::Parameter::Value<String> }
+  SharedRedisReplicationGroupEndpointAddress: { Type: String }
+  SharedRedisReplicationGroupEndpointPort: { Type: String }
   SharedGlueDatabaseName: { Type: String }
 
 Conditions:
@@ -744,6 +746,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: REDIS_HOST
+              Value: !Ref SharedRedisReplicationGroupEndpointAddress
+            - Name: REDIS_PORT
+              Value: !Ref SharedRedisReplicationGroupEndpointPort
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
