Add log group tags

--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -26,6 +26,7 @@ Parameters:
   SharedMemcachedEndpointAddress: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   SharedEcsAsgInstanceSecurityGroupId: { Type: AWS::EC2::SecurityGroup::Id }
   DeploymentPackageBucketName: { Type: String }
   SharedRdsMysqlEndpoint: { Type: String }
@@ -93,6 +94,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
         VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
@@ -122,6 +124,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailCdnArrangerLambdaCodeS3ObjectKey
         CloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
@@ -154,6 +157,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
         VpcId: !Ref VpcId
@@ -192,6 +196,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
         MetricsKinesisStreamArn: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-traffic-lambda/METRICS_KINESIS_STREAM
@@ -228,6 +233,7 @@ Resources:
         RootStackId: !Ref RootStackId
         AmazonSesSmtpCredentialsGeneratorServiceToken: !Ref AmazonSesSmtpCredentialsGeneratorServiceToken
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         SharedRdsMysqlEndpoint: !Ref SharedRdsMysqlEndpoint
         SharedAuroraMysqlEndpoint: !Ref SharedAuroraMysqlEndpoint
         SharedAuroraMysqlPort: !Ref SharedAuroraMysqlPort
@@ -263,6 +269,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -296,6 +303,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
@@ -319,6 +327,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
       Tags:
@@ -344,6 +353,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref S3SigningLambdaCodeS3ObjectKey
       Tags:
@@ -378,6 +388,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
       Tags:
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
