--- a/stacks/apps/dovetail-traffic.yml
+++ b/stacks/apps/dovetail-traffic.yml
@@ -19,6 +19,7 @@ Parameters:
   RootStackName: { Type: String }
   RootStackId: { Type: String }
   CloudWatchAlarmTaggerServiceToken: { Type: String }
+  CloudWatchLogGroupTaggerServiceToken: { Type: String }
   CodeS3Bucket: { Type: String }
   CodeS3ObjectKey: { Type: String }
   MetricsKinesisStreamArn: { Type: AWS::SSM::Parameter::Value<String> }
@@ -96,6 +97,20 @@ Resources:
     Properties:
       LogGroupName: !Sub /aws/lambda/${TrafficFunction}
       RetentionInDays: 14
+  TrafficFunctionLogGroupTags:
+    Type: Custom::CloudWatchLogGroupTags
+    Properties:
+      ServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
+      LogGroupName: !Ref TrafficFunctionLogGroup
+      Tags:
+        - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
+        - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
+        - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
+        - { Key: prx:cloudformation:root-stack-name, Value: !Ref RootStackName }
+        - { Key: prx:cloudformation:root-stack-id, Value: !Ref RootStackId }
+        - { Key: prx:ops:environment, Value: !Ref EnvironmentType }
+        - { Key: prx:dev:family, Value: Dovetail }
+        - { Key: prx:dev:application, Value: Traffic }
   TrafficFunctionElevatedErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
