--- a/stacks/apps-300A.yml
+++ b/stacks/apps-300A.yml
@@ -64,6 +64,7 @@ Resources:
         RootStackName: !Ref RootStackName
         RootStackId: !Ref RootStackId
         CloudWatchAlarmTaggerServiceToken: !Ref CloudWatchAlarmTaggerServiceToken
+        CloudWatchLogGroupTaggerServiceToken: !Ref CloudWatchLogGroupTaggerServiceToken
         CodeS3Bucket: !Ref DeploymentPackageBucketName
         CodeS3ObjectKey: !Ref DovetailAnalyticsLambdaCodeS3ObjectKey
         VpcId: !Ref VpcId
