Hardcode namespace/pool

--- a/stacks/apps/dovetail-router.yml
+++ b/stacks/apps/dovetail-router.yml
@@ -750,6 +750,10 @@ Resources:
               Value: !Ref SharedRedisReplicationGroupEndpointAddress
             - Name: REDIS_PORT
               Value: !Ref SharedRedisReplicationGroupEndpointPort
+            - Name: REDIS_NAMESPACE
+              Value: dovetail
+            - Name: REDIS_POOL_SIZE
+              Value: "4"
           Essential: true
           Image: !Ref EcrImageTag
           LogConfiguration:
