Hardcode redis hosts while we cutover

--- a/stacks/container-apps/dovetail.prx.org.yml
+++ b/stacks/container-apps/dovetail.prx.org.yml
@@ -586,6 +586,14 @@ Resources:
               Value: !Ref DovetailRouterSecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: REDIS_HOST
+              Value: !If [CreateProductionResources, dovetail-prod.bbsmj9.clustercfg.use1.cache.amazonaws.com, dovetail-staging.fangjt.clustercfg.use1.cache.amazonaws.com]
+            - Name: REDIS_PORT
+              Value: "6379"
+            - Name: REDIS_NAMESPACE
+              Value: dovetail
+            - Name: REDIS_POOL_SIZE
+              Value: "4"
             - Name: REDIS_CLONE_HOST
               Value: !Ref SharedRedisReplicationGroupEndpointAddress
             - Name: REDIS_CLONE_PORT
