Move CMS/Exchange/ID to aurora

--- a/stacks/container-apps/cms.prx.org.yml
+++ b/stacks/container-apps/cms.prx.org.yml
@@ -6,7 +6,6 @@ Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
   HasExplicitHostHeader: !Not [!Equals [!Ref ExplicitHostHeader, ""]]
-  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -192,7 +191,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
           Essential: true
@@ -283,7 +282,7 @@ Resources:
             - Name: MEMCACHE_SERVERS
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
           Essential: true
