--- a/stacks/container-apps/exchange.prx.org.yml
+++ b/stacks/container-apps/exchange.prx.org.yml
@@ -7,7 +7,6 @@ Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
   HasMemoryReservation: !Not [!Equals [!Ref ContainerMemoryReservation, ""]]
   HasExplicitHostHeader: !Not [!Equals [!Ref ExplicitHostHeader, ""]]
-  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 
 Parameters:
   UploadSigningEndpointUrl:
@@ -245,7 +244,7 @@ Resources:
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
@@ -354,7 +353,7 @@ Resources:
             - Name: AWS_SIGNER_KEY
               Value: !Ref UploadSigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
@@ -616,7 +615,7 @@ Resources:
             - Name: SAY_WHEN_THREAD
               Value: "true"
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsStaging, !Ref SharedAuroraMysqlEndpoint, !Ref SharedRdsMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
               Value: "3306"
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
