Switch new stacks to prod aurora mysql

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -43,14 +43,12 @@ Parameters:
   S3SigningAccessKeyId: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
-  SharedRdsMysqlEndpoint: { Type: String }
   SharedAuroraMysqlEndpoint: { Type: String }
   SharedAuroraMysqlPort: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
-  HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
   EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
 
@@ -310,9 +308,9 @@ Resources:
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraMysqlPort
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -415,9 +413,9 @@ Resources:
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraMysqlPort
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
@@ -631,9 +629,9 @@ Resources:
             - Name: AWS_SIGNER_KEY
               Value: !Ref S3SigningAccessKeyId
             - Name: DB_PORT_3306_TCP_ADDR
-              Value: !If [IsProduction, !Ref SharedRdsMysqlEndpoint, !Ref SharedAuroraMysqlEndpoint]
+              Value: !Ref SharedAuroraMysqlEndpoint
             - Name: DB_PORT_3306_TCP_PORT
-              Value: "3306"
+              Value: !Ref SharedAuroraMysqlPort
             - Name: MEMCACHED_PORT_11211_TCP_ADDR
               Value: !Ref SharedMemcachedEndpointAddress
             - Name: MEMCACHED_PORT_11211_TCP_PORT
