Turn off new cluster workers for now

--- a/stacks/apps/exchange.yml
+++ b/stacks/apps/exchange.yml
@@ -52,7 +52,9 @@ Conditions:
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  # TODO: re-enable when we move off the old stacks
+  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  EnableWorkers: !Equals ['true', 'false']
 
 Resources:
   ExchangeWildcardHostHeaderListenerRule:
