--- a/stacks/apps/cms.yml
+++ b/stacks/apps/cms.yml
@@ -46,7 +46,10 @@ Conditions:
   IsPrimaryRegion: !Equals [!Ref RegionMode, Primary]
   HasRdsEndpoint: !Not [!Equals [!Ref SharedRdsMysqlEndpoint, ""]]
   HasAuroraEndpoint: !Not [!Equals [!Ref SharedAuroraMysqlEndpoint, ""]]
-  EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  # TODO: re-enable when we move off the old stacks
+  # EnableWorkers: !And [!Condition HasAuroraEndpoint, !Condition IsPrimaryRegion]
+  EnableWorkers: !Equals ['true', 'false']
+
 
 Resources:
   HostHeaderListenerRule:
