Add sitemap DNS records

--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -162,6 +162,11 @@ Resources:
             - '"x5VSDL-trt717dO4NeoA14OUehY4iJ2Njm8qVTsarEk"'
           TTL: "3600"
           Type: TXT
+        - Name: !Sub _acme-challenge.sitemap.${Domain}
+          ResourceRecords:
+            - '"0aLdIXIMrd3qPN_vFKOZ2NYyYZ4UC2U9jvMrmePFMzM"'
+          TTL: "3600"
+          Type: TXT
 
   Files:
     Type: AWS::Route53::RecordSetGroup
@@ -204,6 +209,24 @@ Resources:
           TTL: "300"
           Type: AAAA
           Name: !Sub feeds.${Domain}
+
+  Sitemap:
+    Type: AWS::Route53::RecordSetGroup
+    Properties:
+      Comment: Sitemap
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - "23.185.0.3"
+          TTL: "300"
+          Type: A
+          Name: !Sub sitemap.${Domain}
+        - ResourceRecords:
+            - 2620:12a:8000::3
+            - 2620:12a:8001::3
+          TTL: "300"
+          Type: AAAA
+          Name: !Sub sitemap.${Domain}
 
   ZenDesk:
     Type: AWS::Route53::RecordSetGroup
