Add site verification

--- a/.github/workflows/theworld-org-dns-notifier.yml
+++ b/.github/workflows/theworld-org-dns-notifier.yml
@@ -27,4 +27,7 @@ jobs:
           # Required sender full name (address can be skipped):
           from: PRX Tech Team <tech-team@prx.org>
           # Optional plain body:
-          body: A change was made to the DNS zone template for theworld.org
+          body: |-
+            A change was made to the DNS zone template for theworld.org.
+
+            Details: https://github.com/PRX/Infrastructure/commits/master/dns/theworld.org-hosted-zone.yml
