--- a/dns/theworld.org-hosted-zone.yml
+++ b/dns/theworld.org-hosted-zone.yml
@@ -36,6 +36,7 @@ Resources:
         - Name: !Ref Domain
           ResourceRecords:
             - '"google-site-verification=AmP3tjFXQJg12mB6BkeWWipzwEOl1ZYlyjVSxTmzKbw"'
+            - '"google-site-verification=muTtOe9lHpw4cK1h206kClidRJPqLVgJdKIwOkGTeZo"'
             - '"v=spf1 include:_spf.createsend.com include:_spf.google.com include:mail.zendesk.com -all"'
           TTL: "300"
           Type: TXT
